--- a/Project_Energy/style.css
+++ b/Project_Energy/style.css
@@ -71,7 +71,7 @@ h2{
   width: 20%;
   margin-top: 8px;
   margin-left: 3.2%;
-  background-color: cadetblue;
+  background-color: rgb(129, 213, 216);
 }
 
 .section-1{
@@ -101,8 +101,6 @@ td {
 th {
   background-color: #c4c2c2;
 }
-
-
 
 
 .kwh-meter {
@@ -158,7 +156,7 @@ th {
 }
 
 #current-reading {
-  background-color: #d7e9f5;
+  background-color: #e5eef4;
   
 }
 #current-reading-data {
@@ -169,23 +167,8 @@ th {
 }
 
 
-
-
-
-.chart-container {
-  flex: 1;
-  max-width: 300px;
-  min-width: 300px;
-  margin: 10px;
-}
-
-canvas {
-  width: 100%;
-  height: 300px;
-}
-
-
-
 .section-report {
-  width: 90%;
+  width: 100%;
+  text-align: center;
+  padding: 5px;
 }
